TODO
    search
    back-end: clean up (superfluous files) and manually remove whole subcontents
    import/export: multiple files <-> 1 file per subcontent (maybe even alternative config option)

    extend for subadmin use
    tip: use with userfields ($name parameter) for subadmin pages
    idea: publish subadmin content (semi-)automatically ?? (draw-back: "can't" change heading!)

    import/export of content
    credit Gert for the brillant idea

    move admin only functions to admin.php
    System check: SAFE_MODE & REGISTER_GLOBALS

Version 1alpha2 - released 2012-02-27
cmb	changed plugin's name to Coco_XH
cmb	fixed faulty code examples in manual (reported by snafu and Gert)
cmb	changed: save button is only shown, if no editor is available
cmb	documented possibility to use scripting
cmb	fixed bug: multiple editors didn't work independently (reported by Gert)
cmb	added $height parameter to also() (suggested by Gert); updated manual accordingly
cmb	removed necessity to insert function call to template to enable editing
cmb	updated manual accordingly
cmb	added screenshots
cmb	cleaned up some code

Version 1alpha1 - released 2012-02-17
cmb	initial release