@@ -4,6 +4,8 @@ $plugin_cf['coco']['utf8-marker']="äöüß";
 
 $plugin_cf['coco']['folder_data']="";
 
+$plugin_cf['coco']['search']="left"; // TODO: leave empty
+
 //$plugin_cf['coco']['enabled']="0";
 
 ?>
